Init the content policy service ptr lazily so we don't reenter layout module init.  Bug 305310, r+sr=peterv